--- a/01_agama/madhyama/MA_096.md
+++ b/01_agama/madhyama/MA_096.md
@@ -2,7 +2,7 @@
 layout: default
 title: 'The Medium Discourses | Chapter 8: Defilement | 96. Not Having'
 type: kramdown
-base: ../../
+base: ../../../
 previous: MA_095.html
 next: MA_098.html
 ---
@@ -14,32 +14,44 @@ next: MA_098.html
   <th class='ch'>（九六） 中阿含 穢品 無經 第十 (第二小土城誦)</th>
   <th class='en'>96. Not Having</th>
   <tr>
-    <td class="ch" title='t125.2.577c16'>我聞如是： 一時，佛遊舍衛國，在勝林、給孤獨園。</td>
-    <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha traveled to the country of Śrāvastī and stayed at Anāthapiṇḍada’s Park in Jeta’s Grove.</td>
+    <td class='ch' title='t26.2.577c16'>我聞如是： 一時，佛遊舍衛國，在勝林、給孤獨園。</td>
+    <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha traveled to the country of Śrāvastī and was staying at Anāthapiṇḍada’s Park in Jeta’s Grove.</td>
   </tr>
   <tr>
-    <td class="ch" title='t125.2.577c17'>爾時，尊者舍梨子告諸比丘： 「諸賢，若有比丘、比丘尼未聞法者不得聞，已聞法者便忘失。 若使有法本所修行、廣布、誦習，慧之所解，彼不復憶。 知而不知。 諸賢，是謂比丘、比丘尼淨法衰退。</td>
+    <td class='ch' title='t26.2.577c17'>爾時，尊者舍梨子告諸比丘： 「諸賢，若有比丘、比丘尼未聞法者不得聞，已聞法者便忘失。 若使有法本所修行、廣布、誦習，慧之所解，彼不復憶。 知而不知。 諸賢，是謂比丘、比丘尼淨法衰退。</td>
     <td id='p2'>2. It was then that Venerable Śāriputra addressed the monks, “Venerables, suppose a monk or nun isn’t able to hear the Dharma they haven’t heard yet, or they forget it after having heard it. Suppose that they’ve practiced, spread, and recited the Dharma before and understood it with wisdom, but they don’t remember it anymore. They know it, and then they don’t know it. Venerables, this is called a monk or nun who has declined in the pure Dharma.<sup id="ref2"><a href="#n2">2</a></sup></td>
   </tr>
   <tr>
-    <td class="ch" title='t125.2.577c21'>「諸賢，若有比丘、比丘尼未聞法者便得聞，已聞法者不忘失。 若使有法本所修行、廣布、誦習，慧之所解，彼常憶念。 知而復知。 是謂比丘、比丘尼淨法轉增。</td>
+    <td class='ch' title='t26.2.577c21'>「諸賢，若有比丘、比丘尼未聞法者便得聞，已聞法者不忘失。 若使有法本所修行、廣布、誦習，慧之所解，彼常憶念。 知而復知。 是謂比丘、比丘尼淨法轉增。</td>
     <td id='p3'>3. “Venerables, suppose a monk or nun is able to hear the Dharma they haven’t heard yet, and they don’t forget it after having heard it. Suppose that they’ve practiced, spread, and recited the Dharma before, understood it with wisdom, and they always remember it. They knew it, and they still know it. Venerables, this is called a monk or nun who has improved in the pure Dharma.</td>
   </tr>
   <tr>
-    <td class="ch" title='t125.2.577c25'>「諸賢，比丘者當作如是觀： 『我為有增伺，為無有增伺？ 我為有瞋恚心，為無有瞋恚心？ 我為有睡眠纏，為無有睡眠纏？ 我為有調貢高，為無有調貢高？ 我為有疑惑，為無有疑惑？ 我為有身諍，為無有身諍？ 我為有穢污心，為無有穢污心？ 我為有信，為無有信？ 我為有進，為無有進？ 我為有念，為無有念？ 我為有定，為無有定？ 我為有惡慧，為無有惡慧？』</td>
-    <td id='p4'>4. “Venerables, a monk should contemplate in this way: ‘Do I have longing, or do I have no longing? Do I have hateful thoughts, or do I have no hateful thoughts? Am I wrapped in sleepiness, or am I not wrapped in sleepiness? Do I have agitated arrogance, or do I have no agitated arrogance? Do I have perplexity, or do I have no perplexity? Do I have physical violence, or do I have no physical violence? Do I have filthy thoughts, or do I have no filthy thoughts? Do I have faith, or do I have no faith? Do I have diligence, or do I have no diligence? Do I have mindfulness, or do I have no mindfulness? Am I settled, or am I not settled? Do I have poor wisdom, or do I have no poor wisdom?’</td>
+    <td class='ch' title='t26.2.577c25'>「諸賢，比丘者當作如是觀： 『我為有增伺，為無有增伺？ 我為有瞋恚心，為無有瞋恚心？ 我為有睡眠纏，為無有睡眠纏？ 我為有調貢高，為無有調貢高？ 我為有疑惑，為無有疑惑？ 我為有身諍，為無有身諍？ 我為有穢污心，為無有穢污心？ 我為有信，為無有信？ 我為有進，為無有進？ 我為有念，為無有念？ 我為有定，為無有定？ 我為有惡慧，為無有惡慧？』</td>
+    <td id='p4'>4. “Venerables, a monk should contemplate in this way: ‘Do I have covetousness, or do I have no covetousness? Do I have hateful thoughts, or do I have no hateful thoughts? Am I ensnared in drowsiness, or am I not ensnared in drowsiness? Do I have haughtiness, or do I have no haughtiness? Do I have uncertainty, or do I have no uncertainty? Am I violent, or am I not violent? Do I have defiled thoughts, or do I have no defiled thoughts? Do I have faith, or do I have no faith? Do I have energy, or do I have no energy? Do I have mindfulness, or do I have no mindfulness? Am I settled, or am I unsettled? Do I have poor wisdom, or do I have no poor wisdom?’<sup id="ref3"><a href="#n3">3</a></sup></td>
   </tr>
   <tr>
-    <td class="ch" title='t125.2.578a4'>「諸賢，若比丘觀時，則知： 『我有增伺⋯有瞋恚心⋯有睡眠纏⋯有調貢高⋯有疑惑⋯有身諍⋯有穢污心⋯無信⋯無進⋯無念⋯無定⋯有惡慧者。』 諸賢，彼比丘欲滅此惡不善法故，便以速求方便，學極精勤。 正念、正智，忍不令退。 諸賢，猶人為火燒頭、燒衣，急求方便救頭、救衣。 諸賢，如是，比丘欲滅此惡不善法故，便以速求方便，學極精勤。 正念、正智，忍不令退。</td>
-    <td id='p5'>5. “Venerables, suppose when he contemplates this, a monk knows, ‘I have longing … hateful thoughts … wrapped in sleepiness … agitated arrogance … perplexity … physical violence … filthy thoughts … no faith … no diligence … no mindfulness … no settledness … and have bad wisdom.’<sup id="ref3"><a href="#n3">3</a></sup> Venerables, because he wants to cease these bad and unskillful things, that monk then quickly pursues the method to do that, training with the utmost effort. He endures and doesn’t let himself retreat using right mindfulness and knowledge. He’s like a man with his hair or clothes on fire who urgently seeks to put them out. Thus, because he wants to cease these bad and unskillful things, this monk quickly pursues the method to do that and trains with the utmost effort. He endures and doesn’t let himself retreat using right mindfulness and knowledge.</td>
+    <td class='ch' title='t26.2.578a4'>「諸賢，若比丘觀時，則知： 『我有增伺⋯有瞋恚心⋯有睡眠纏⋯有調貢高⋯有疑惑⋯有身諍⋯有穢污心⋯無信⋯無進⋯無念⋯無定⋯有惡慧者。』 諸賢，彼比丘欲滅此惡不善法故，便以速求方便。 學極精勤，正念、正智，忍不令退。 諸賢，猶人為火燒頭、燒衣，急求方便救頭、救衣。 諸賢，如是，比丘欲滅此惡不善法故，便以速求方便。 學極精勤，正念、正智，忍不令退。</td>
+    <td id='p5'>5. “Venerables, suppose when he contemplates this, a monk knows, ‘I have covetousness … hateful thoughts … drowsiness … haughtiness … uncertainty … violence … defiled thoughts … no faith … no energy … no mindfulness … no settledness … have poor wisdom.’<sup id="ref4"><a href="#n4">4</a></sup> Venerables,  Wanting to cease these bad and unskillful things, that monk will quickly pursue the methods to do that. He trains with utmost diligence, right mindfulness, and right knowledge and patiently doesn’t let himself regress. He’s like a man with his hair or clothes on fire who instantly seeks to put them out. Thus is this monk who wants to cease these bad and unskillful things and quickly pursues the method to do that. He trains with utmost diligence, right mindfulness, and right knowledge and patiently doesn’t let himself regress.</td>
   </tr>
   <tr>
-    <td class="ch" title='t125.2.578a12'>「諸賢，若比丘觀時，則知： 『我無增伺⋯無瞋恚心⋯無睡眠纏⋯無調貢高⋯無有疑惑⋯無有身諍⋯無穢污心⋯有信⋯有進⋯有念⋯有定⋯無惡慧者。』 彼比丘欲住此善法，不忘不退，修行廣布故，便以速求方便，學極精勤。 正念、正智，忍不令退。 猶人為火燒頭、燒衣，急求方便救頭、救衣。 諸賢，如是，比丘欲住此善法，不忘不退，修行廣布故，便以速求方便，學極精勤。 正念、正智，忍不令退。」</td>
-    <td id='p6'>6. “Venerables, suppose when he contemplates this, a monk knows, ‘I have no longing … no hateful thoughts … not wrapped in sleepiness … no agitated arrogance … no perplexity … no physical violence … no filthy thoughts … faith … diligence … mindfulness … settledness … and have no bad wisdom.’ Venerables, because he wants to abide in these skillful things and not forget or retreat from cultivating and disseminating them, that monk quickly seeks the method to do that, training with the utmost effort. He endures and doesn’t let himself retreat using right mindfulness and knowledge. He’s like a man with his hair or clothes on fire who urgently seeks to put them out. Thus, Venerables, because he wants to abide in these skillful things and not forget or retreat from cultivating and disseminating them, this monk quickly seeks the method to do that, training with the utmost effort. He endures and doesn’t let himself retreat using right mindfulness and knowledge.”</td>
+    <td class='ch' title='t26.2.578a12'>「諸賢，若比丘觀時，則知： 『我無增伺⋯無瞋恚心⋯無睡眠纏⋯無調貢高⋯無有疑惑⋯無有身諍⋯無穢污心⋯有信⋯有進⋯有念⋯有定⋯無惡慧者。』 彼比丘欲住此善法，不忘不退，修行廣布故，便以速求方便。 學極精勤，正念、正智，忍不令退。 猶人為火燒頭、燒衣，急求方便救頭、救衣。 諸賢，如是，比丘欲住此善法，不忘不退，修行廣布故。 便以速求方便。 學極精勤，正念、正智，忍不令退。」</td>
+    <td id='p6'>6. “Venerables, suppose when he contemplates this, a monk knows, ‘I have no covetousness … no hateful thoughts … no drowsiness … no haughtiness … no uncertainty … no violence … no defiled thoughts … have faith … have energy … have mindfulness … have settledness … no poor wisdom.’ Wanting to abide in these skillful qualities and not forget or retreat from cultivating and disseminating them, that monk quickly seeks the method to do that. He trains with utmost diligence, right mindfulness, and right knowledge and patiently doesn’t let himself regress. He’s like a man with his hair or clothes on fire who instantly seeks to put them out. Thus, Venerables, is this monk who wants to abide in these skillful qualities and not forget or retreat from cultivating and disseminating them. He quickly seeks the method to do that. He trains with utmost diligence, right mindfulness, and right knowledge and patiently doesn’t let himself regress.”</td>
   </tr>
   <tr>
-    <td class="ch" title='t125.2.578a21'>尊者舍梨子所說如是。 彼諸比丘聞尊者舍梨子所說歡喜，奉行。</td>
+    <td class='ch' title='t26.2.578a21'>尊者舍梨子所說如是。 彼諸比丘聞尊者舍梨子所說歡喜，奉行。</td>
     <td id='p7'>7. This is what Venerable Śāriputra said. Those monks who heard what Venerable Śāriputra taught rejoiced and approved.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='t26.2.578a23'>無經第十竟 (五百六十八字)</td>
+    <td class="sutra_end">End of the tenth <em>sūtra</em>, <em>Not Having</em> (568 Chinese characters)</td>
+  </tr>
+  <tr>
+    <td class='ch' title='t26.2.578a24'>中阿含經 卷第二十三 (八千六百五十八字)</td>
+    <td class="sutra_end">End of fascicle 23 of the <em>Medium Discourses</em> (80,658 Chinese characters)</td>
+  </tr>
+  <tr>
+    <td class='ch' title='t26.2.578a25'>中阿含 穢品第三竟 (萬六千一百四十字) (第二小土城誦)</td>
+    <td class="sutra_end">End of Chapter 8: Defilement of the <em>Medium Discourses</em> (16,140 Chinese characters) (The Second Recitation of Minor Lands and Cities)</td>
   </tr>
 </table>
 
@@ -48,16 +60,16 @@ next: MA_098.html
 <h3 id="notes">Notes</h3>
 
 <ol class="notes-list">
-<li id="n1">For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T01n0026_p0577c15" target="_blank">T26.1.577c15-8a25</a>. Its parallel is <a href="https://suttacentral.net/an10.55" target="_blank">AN 10.55</a>, but it shares more in common with <a href="MA_095.html" target="_blank">MĀ 95</a> and <a href="https://suttacentral.net/an10.53" target="_blank">AN 10.53</a>.<br/>
-The title of this <em>sūtra</em> reads simply as <span class="ch">無</span> (“nothing” or “having no”), which might be a reading of a word similar to AN 10.55’s title, but the C. trans. of <em>parihāna</em> (“decline, regress”) would instead be <span class="ch">衰退</span>. I’ve chosen to read <span class="ch">無</span> in the way it’s used in the body of the <em>sūtra</em>, which is to mean “having no” unskillful qualities.<br/>
-This <em>sūtra</em> and AN 10.55 have somewhat differently worded introductions, yet they contain the same keywords and meaning. Afterward, Śāriputra gives the same teaching as the one given by the Buddha in MĀ 95, as the final three paragraphs in both <em>sūtra</em>s are nearly identical. The parallel to this <em>sūtra</em>, AN 10.55, has a different teaching in which the practitioner assesses their skillful rather than unskillful qualities. As a result, it is only a similar parallel. [<a href="#ref1">back</a>]</li>
-<li id="n2">AN 10.55 has a more verbose introduction in which Śāriputra announcing the topics that he would be discussing for an assembly of monk. This <em>sūtra</em> begins at the point when he defines what being liable to decline means. Despite these differences, we can see that both include four specific points describing a person’s grasp of the Dharma: hearing Dharma that they haven’t heard yet (<span class="ch">未聞法者得聞</span>, <em>assutañceva dhammaṁ suṇāti</em>), not forgetting the Dharma they’ve heard (<span class="ch">已聞法者不忘失</span>, <em>sutā cassa dhammā na sammosaṁ gacchanti</em>), reciting or rehearsing the Dharma (<span class="ch">若使有法本所修行、廣布、誦習</span>, <em>ye cassa dhammā pubbe cetaso asamphuṭṭhapubbā te cassa samudācaranti</em>), and understanding it (<span class="ch">慧之所解</span>, <em>aviññātañceva vijānāti</em>). These points are worded differently in these two versions, but we can see the basic commonality: hearing, not forgetting, rehearsing, and understanding. [<a href="#ref2">back</a>]</li>
-<li id="n3"><em>no diligence</em>. C. <span class="ch">無進</span>. I’ve read <span class="ch">進</span> as an abbreviation of <span class="ch">精進</span> (≈ P. <em>āraddhaviriya</em> in MĀ 95/AN 10.53). This list of qualities is otherwise verbatim of that found in <a href="MA_095.html" target="_blank">MĀ 95</a>. See the notes to that <em>sūtra</em> for a detailed discussion of my translation here. [<a href="#ref3">back</a>]</li>
+<li id="n1"><p>For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T01n0026_p0577c15" target="_blank">T26.1.577c15-8a25</a>. Its parallel is <a href="https://suttacentral.net/an10.55" target="_blank">AN 10.55</a>, but it shares more in common with <a href="MA_095.html" target="_blank">MĀ 95</a> and <a href="https://suttacentral.net/an10.53" target="_blank">AN 10.53</a>.</p>
+<p>The title of this <em>sūtra</em> reads simply as <span class="ch">無</span> (“nothing” or “having no”), which might be a reading of a word similar to AN 10.55’s title, but the C. trans. of <em>parihāna</em> (“decline, regress”) would instead be <span class="ch">衰退</span>. I’ve chosen to read <span class="ch">無</span> in the way it’s used in the body of the <em>sūtra</em>, which is to mean “having no” unskillful qualities.</p>
+<p>This <em>sūtra</em> and AN 10.55 have somewhat differently worded introductions, yet they contain the same keywords and meaning. Afterward, Śāriputra gives the same teaching as the one given by the Buddha in MĀ 95, as the final three paragraphs in both <em>sūtra</em>s are nearly identical. The parallel to this <em>sūtra</em>, AN 10.55, has a different teaching in which the practitioner assesses their skillful rather than unskillful qualities. As a result, it is only a similar parallel. [<a href="#ref1">back</a>]</p></li>
+<li id="n2"><p>AN 10.55 has a more verbose introduction in which Śāriputra announcing the topics that he would be discussing for an assembly of monk. This <em>sūtra</em> begins at the point when he defines what being liable to decline means. Despite these differences, we can see that both include four specific points describing a person’s grasp of the Dharma: hearing Dharma that they haven’t heard yet (<span class="ch">未聞法者得聞</span>, <em>assutañceva dhammaṁ suṇāti</em>), not forgetting the Dharma they’ve heard (<span class="ch">已聞法者不忘失</span>, <em>sutā cassa dhammā na sammosaṁ gacchanti</em>), reciting or rehearsing the Dharma (<span class="ch">若使有法本所修行、廣布、誦習</span>, <em>ye cassa dhammā pubbe cetaso asamphuṭṭhapubbā te cassa samudācaranti</em>), and understanding it (<span class="ch">慧之所解</span>, <em>aviññātañceva vijānāti</em>). These points are worded differently in these two versions, but we can see the basic commonality: hearing, not forgetting, rehearsing, and understanding. [<a href="#ref2">back</a>]</p></li>
+<li id="n3"><p>This list of qualities is verbatim of that found in <a href="MA_095.html" target="_blank">MĀ 95</a>. See the notes to that <em>sūtra</em> for a detailed discussion of my translation here. [<a href="#ref3">back</a>]</p></li>
+<li id="n4"><p><em>no energy</em>. C. <span class="ch">無進</span>. I’ve read <span class="ch">進</span> as an abbreviation of <span class="ch">精進</span> (≈ P. <em>āraddhaviriya</em> in MĀ 95/AN 10.53). [<a href="#ref4">back</a>]</p></li>
 </ol>
-
 <hr/>
 
 <p class="translator">Translator: Charles Patton</p>
-<p class='revised'>Last Revised: 1 August 2024</p>
+<p class='revised'>Last Revised: 12 October 2025</p>
 
 <hr/>
