--- a/01_agama/samyukta/03/SA3_9.md
+++ b/01_agama/samyukta/03/SA3_9.md
@@ -102,7 +102,7 @@ next: SA3_10.html
 </ol>
 <hr/>
 
-<p class="translator">Translator: Charles Patton</p>
+<p class="translator">Translator: Dōgen Sīṁsāpa (draft) and Charles Patton (editor)</p>
 <p class='revised'>Last Revised: 23 September 2025</p>
 
 <hr/>
