--- a/01_agama/madhyama/MA_110.md
+++ b/01_agama/madhyama/MA_110.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: 'The Medium Discourses | Chapter 10: Forests | 110. Examining One’s Mind (2)'
+title: 'The Medium Discourses | Chapter 10: Forests | 110. Examining One’s Own Mind (2)'
 type: kramdown
 base: ../../../
 previous: MA_109.html
@@ -12,7 +12,7 @@ next: MA_127.html
 
 <table class="trans">
   <th class='ch'>（一一〇）中阿含 林品 自觀心經第四 (第二小土城誦)</th>
-  <th class='en'>110. Examining One’s Mind (2)</th>
+  <th class='en'>110. Examining One’s Own Mind (2)</th>
   <tr>
     <td class='ch' title='t26.2.598c23'>我聞如是： 一時，佛遊舍衛國，在勝林、給孤獨園。</td>
     <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha traveled to the country of Śrāvastī and stayed at Anāthapiṇḍada’s Park in Jeta’s Grove.</td>
