--- a/01_agama/samyukta/03/SA3_14.md
+++ b/01_agama/samyukta/03/SA3_14.md
@@ -54,7 +54,7 @@ next: SA3_26.html
 <ol class="notes-list">
 <li id="n1"><p>This is <em>sūtra</em> no. 296 in the <cite>Taisho</cite> edition and no. 477 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0084b12" target="_blank">T99.2.84b12-4c10</a>, <a href="https://cbetaonline.dila.edu.tw/zh/Y31n0030_p0034a14" target="_blank">Y30.34a14-5a12</a>). It’s parallel with <a href="https://suttacentral.net/sn12.37" target="_blank">SN 12.20</a> and <a href="https://suttacentral.net/sf162" target="_blank">SF163</a>.</p>
 <p>SN 12.20 is very similar to this <em>sūtra</em> until we reach the conclusion about cutting views, while the extant Sanskrit mirrors this text more closely throughout. [<a href="#ref1">back</a>]</p></li>
-<li id="n2"><p><em>Whether a </em>buddha<em> arises in the world … realm of principles.</em> C. <span class="ch">謂無明、行。^若佛出世，若未出世，此法常住，法住、法界。</span>, P. <em>Jātipaccayā, bhikkhave, jarāmaraṇaṁ. Uppādā vā tathāgatānaṁ anuppādā vā tathāgatānaṁ, ṭhitāva sā dhātu dhammaṭṭhitatā dhammaniyāmatā idappaccayatā.</em>, S. <em>avidyāpratyayāḥ saṁskārā ity utpādād vā tathāgatānām anutpādād vā sthitā eveyaṁ dharmatā dharmasthitaye dhātuḥ</em>.</p>
+<li id="n2"><p><em>Whether a </em>buddha<em> arises in the world … realm of principles.</em> C. <span class="ch">謂無明、行。若佛出世，若未出世，此法常住，法住、法界。</span>, P. <em>Jātipaccayā, bhikkhave, jarāmaraṇaṁ. Uppādā vā tathāgatānaṁ anuppādā vā tathāgatānaṁ, ṭhitāva sā dhātu dhammaṭṭhitatā dhammaniyāmatā idappaccayatā.</em>, S. <em>avidyāpratyayāḥ saṁskārā ity utpādād vā tathāgatānām anutpādād vā sthitā eveyaṁ dharmatā dharmasthitaye dhātuḥ</em>.</p>
 <p>This passage is probably one of the most difficult to interpret and translate in SĀ, and I have been grammatically creative to achieve an English statement that more-or-less captures the meaning of it. There are two main difficulties here. First, this and the other two parallel passages vary in wording in significant ways. Second, the terms involved (e.g., <em>dharmatā</em> and <em>dharmadhātu</em>) are well known in later Buddhist sources as abstract and transcendental concepts. These two things make it difficult to interpret the practical meaning intended in its historical context.</p>
 <p>The term that I find the most problematic is <span class="ch">法界</span> (<em>dharmadhātu</em>), which is deployed here as a synonym of <span class="ch">法住</span> (<em>dharmasthita</em>) but isn’t found in SN 12.20 or SF163 (though, the latter reads <em>dhātuḥ</em>). I’ve settled on reading it as meaning “realm of <em>dharma</em>s” that’s perhaps juxtaposed with a “realm of sentient beings.” This realm would seem to have been considered a repository of nature laws or principles of existence, which is accessed and known by <em>buddha</em>s when they awaken.</p>
 <p>The basic meaning of the entire passage is expressed more clearly in SĀ 3.17 (299) which reads: “The Buddha addressed that monk: ‘The principle of dependent arising was not created by me, nor was it created by anyone else. Still, whether the Tathāgata arises in the world or not, the realm of <em>dharma</em>s is always present. The Tathāgata realizes this principle himself and becomes fully and correctly awakened. He then discerns and explains it for sentient beings, disclosing and making it plain to them.’” (<span class="ch">佛告比丘：「緣起法者，非我所作，亦非餘人作。然彼如來出世及未出世，法界常住。彼如來自覺此法，成等正覺，為諸眾生分別演說，開發顯示。</span> [<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0085b23" target="_blank">T99.2.85b23-7</a>]).</p>
