--- a/01_agama/madhyama/MA_109.md
+++ b/01_agama/madhyama/MA_109.md
@@ -35,7 +35,7 @@ next: MA_110.html
   </tr>
   <tr>
     <td class='ch' title='t26.2.598c1'>「若比丘觀已，則知： 『我得內止，亦得最上慧觀法。』 彼比丘住此善法已，當求漏盡智通作證。 所以者何？ 我說不得畜一切衣，亦說得畜一切衣。 云何衣我說不得畜？ 若畜衣便增長惡不善法、衰退善法者，如是衣我說不得畜。 云何衣我說得畜？ 若畜衣便增長善法、衰退惡不善法者，如是衣我說得畜。</td>
-    <td id='p6'>6. “Suppose a monk knows this after his examination: ‘I’ve gained both an inner calm and the contemplation of Dharma with the highest wisdom.’ Having abided in these good qualities, that monk must seek to realize the knowledge that his contaminants are ended. Why is that? I say there’s clothing that none of which can be kept, and I say there’s clothing that all of which can be kept.<sup id="ref3"><a href="#n3">3</a></sup> What is the clothing that none of which can be kept? If keeping the clothing increases bad and unskillful qualities and diminishes skillful qualities, such clothing I say can4ot be kept.<sup id="ref4"><a href="#n4">4</a></sup> What is the clothing I say can be kept? If keeping the clothing increases skillful qualities and diminishes bad and unskillful qualities, such clothing I say can be kept.</td>
+    <td id='p6'>6. “Suppose a monk knows this after his examination: ‘I’ve gained both an inner calm and the contemplation of Dharma with the highest wisdom.’ Having abided in these good qualities, that monk must seek to realize the knowledge that his contaminants are ended. Why is that? I say there’s clothing that none of which can be kept, and I say there’s clothing that all of which can be kept.<sup id="ref3"><a href="#n3">3</a></sup> What is the clothing that none of which can be kept? If keeping the clothing increases bad and unskillful qualities and diminishes skillful qualities, such clothing I say cannot be kept.<sup id="ref4"><a href="#n4">4</a></sup> What is the clothing I say can be kept? If keeping the clothing increases skillful qualities and diminishes bad and unskillful qualities, such clothing I say can be kept.</td>
   </tr>
   <tr>
     <td class='ch' title='t26.2.598c8'>「如衣、飲食、床榻、村邑亦復如是。 我說不得狎習一切人，亦說得狎習一切人。 云何人我說不得狎習？ 若狎習人便增長惡不善法、衰退善法者，如是人我說不得狎習。 云何人我說得與狎習？ 若狎習人便增長善法、衰退惡不善法者，如是人我說得與狎習。</td>
