typos typos everywhere

--- a/01_agama/madhyama/MA_113.md
+++ b/01_agama/madhyama/MA_113.md
@@ -59,7 +59,7 @@ next: MA_127.html
   </tr>
   <tr>
     <td class='ch' title='t26.2.602c12'>「彼若復問： 『以何為訖？』 當如是答： 『以涅槃為訖。』</td>
-    <td id='p10'>10. “Suppose they also ask, ‘By what are they ended?’ You should answer in this way: ‘They are ended by <em>7irvāna</em>.’<sup id="ref7"><a href="#n7">7</a></sup></td>
+    <td id='p10'>10. “Suppose they also ask, ‘By what are they ended?’ You should answer in this way: ‘They are ended by <em>nirvāna</em>.’<sup id="ref7"><a href="#n7">7</a></sup></td>
   </tr>
   <tr>
     <td class='ch' title='t26.2.602c13'>「是為，比丘，欲為諸法本。 更樂為諸法和。 覺為諸法來。 思想為諸法有。 念為諸法上主。 定為諸法前。 慧為諸法上。 解脫為諸法真。 涅槃為諸法訖。 是故，比丘，當如是學。</td>
