added "see" to note 1

--- a/01_agama/madhyama/MA_113.md
+++ b/01_agama/madhyama/MA_113.md
@@ -90,7 +90,7 @@ next: MA_127.html
 <ol class="notes-list">
 <li id="n1"><p>For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T01n0026_p0602b28" target="_blank">T26.1.602b28-3a2</a>. <a href="https://suttacentral.net/an10.58" target="_blank">AN 10.58</a>, <a href="https://suttacentral.net/an8.83" target="_blank">AN 8.83</a>, and <a href="https://suttacentral.net/t59" target="_blank">T59</a> are parallels of this <em>sūtra</em>.</p>
 <p>When we compare this <em>sūtra</em> to the other three parallels that exist, we can immediately notice that it matches the other C. translation (T59) more closely than the two Theravāda parallels, but all four texts are very similar in their core content. It seems likely that T59, which was translated more than a century before this version, is also from the Sarvāstivāda tradition, though it may have descended from a different canonical lineage. Sarvāstivādins seemed to have had at least two canonical traditions, perhaps three.</p>
-<p>The core of this discourse is a list of questions about “all things” (S. <em>sarvadharma</em>) that might be asked by non-Buddhists. The Buddha then supplies his monks with a set of simple answers to these questions that should be their replies. Both this version and T59 present nine questions. AN 8.83 gives us a list of eight questions, and two more are added in AN 10.58. Comparing MĀ 113, T59, and AN 8.83, we find eight questions in common. The ninth question in MĀ 113 and T59 is the tenth question in AN 10.58. The ninth question in AN 10.58 is unique to that text, probably added to make an even list of ten. As we shall, however, textual corruptions and variations have cropped up in the questions, but the answers are more consistent.</p>
+<p>The core of this discourse is a list of questions about “all things” (S. <em>sarvadharma</em>) that might be asked by non-Buddhists. The Buddha then supplies his monks with a set of simple answers to these questions that should be their replies. Both this version and T59 present nine questions. AN 8.83 gives us a list of eight questions, and two more are added in AN 10.58. Comparing MĀ 113, T59, and AN 8.83, we find eight questions in common. The ninth question in MĀ 113 and T59 is the tenth question in AN 10.58. The ninth question in AN 10.58 is unique to that text, probably added to make an even list of ten. As we shall see, however, textual corruptions and variations have cropped up in the questions, but the answers are more consistent.</p>
 <p>Beyond these minor differences between the parallel lists, the major difference between MĀ 113 and T59 compared to AN 8.83 and AN 10.58 is that the Sarvāstivāda version includes a conclusion detailing a set of ideas for the monks to contemplate. (These ideas occur in other EBT sources, see the notes below for more details about them.) For their part, the P. versions include a longer introduction that repeats the questions twice before their answers are given. [<a href="#ref1">back</a>]</p></li>
 <li id="n2"><p><em>all things</em>. C. <span class="ch">一切諸法</span>, C. <span class="ch">諸法</span> (T59), P. <em>sabbe dhammā</em>. While I’ve translated <em>dharma</em> generically here as “things,” it would seem from the answers to the questions about them that <em>dharma</em> here refers to psychological or doctrinal things, such as the five aggregates, defilements, virtues, and the like. These are not questions about physical things like rocks and trees. At least, not until they enter a person’s mind. [<a href="#ref2">back</a>]</p></li>
 <li id="n3"><p><em>increased by contact</em>. C. <span class="ch">以更樂為和</span>, C. <span class="ch">更為習</span> (T59), P. <em>phassasamudayā</em>. The C. here must be using <span class="ch">和</span> as a synonym of <span class="ch">加</span> (“to add, increase”), which is an extension of its more common meaning of “to combine, join.” The equivalent was <em>samudayā</em> in both the P. parallels, which means something more like “origin, appearance, formation.”</p>
