edited titles of parts 1 and 2.

--- a/13_abhidharma/T1548/C15.md
+++ b/13_abhidharma/T1548/C15.md
@@ -8,7 +8,7 @@ next: index.html
 ---
 
 <h1><a href='index.html'>The Higher Teaching of Śāriputra</a></h1>
-<h2>Part II: Uninterrogated</h2>
+<h2>Part II: Without Interrogation</h2>
 
 <table class="trans">
   <th class='ch'>緣品第五</th>
